istio/overlays-2/non-prod/service-ingress-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-internal
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: adarz-spoke-products-sn-01
    service.beta.kubernetes.io/azure-load-balancer-resource-group: adazr-rg-1001
  labels:
    app: istio-ingressgateway
    release: istio
    istio: ingressgateway
spec:
  type: LoadBalancer
  loadBalancerIP: 10.5.65.36
  selector:
    app: istio-ingressgateway
  ports:
    - name: http2
      port: 80
      targetPort: 80
    - name: https
      port: 443
