istio/overlays-2/non-prod/https-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: https-ingressgateway
spec:
  servers:
    - port:
        number: 443
        name: https-443-test
        protocol: HTTPS
      hosts:
        - "*.test.mhra.gov.uk"
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
